@@ -18,6 +18,7 @@ opsi-winst/opsi-script (4.12.0.13) stable; urgency=low
   * osdefinedfunctions: fixes on parsing paramtype
   * osparser: Ifelseendiflevel : longint = 0; // global nestlevel store
      used to pass nestlevel to evaluatestring and producestringlist  --> local functions
+  * * osdefinedfunctions: fix in isVisibleLocalVar
 
 -- Detlef Oertel <d.oertel@uib.de>  Wed, 27 Dec 2017:15:00:00 +0200
 
